# WebAppTelegram

./: .env.sample  README.md  pyproject.toml
bot/: admin.py  models.py  urls.py  views.py
bot/migrations/: 0001_initial.py
bot/templates/: base.html  index.html
config/: settings.py  urls.py
